@@ -1,3 +1,6 @@
+2016-07-30  Kirit Saelensminde  <kirit@felspar.com>
+ `fost.response.401` can now be given an inner view for the response data.
+
 2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
  Add middleware that can alter the request by adding headers to it.
 
